# nhentei

./: LICENSE  README.md  setup.cfg
nhentei/: nfunctions.py
nhentei.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
