[metadata]
name = nhentei
version = 2.0
author = Sa_Ko
author_email = alphaschleimcmds@gmail.com
description = nHentai API implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sa-koitchio/nhentei
project_urls =
    Bug Tracker = https://github.com/sa-koitchio/nhentei
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6